--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
+.Nav {
+  padding: 12px;
+  background-color: black;
+  color: white;
+  display: flex;
+  gap: 12px;
+  font-weight: bold;
+}
+
+.Nav-link {
+  color: unset;
+}
+
 .App {
   text-align: center;
+  padding-top: 24px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Count-too-high {
+  color: orange;
 }
